/cp 2017-07-03  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/65775
	* decl.c (grokdeclarator): Move checks on function return type after
	the splice_late_return_type call; if declspecs->locations[ds_type_spec]
	is UNKNOWN_LOCATION fall back to input_location.

/testsuite
2017-07-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/65775
	* g++.dg/cpp0x/trailing14.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@249935 138bc75d-0d04-0410-961f-82ee72b054a4